--- a/Nosotros.html
+++ b/Nosotros.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nosotros</title>
-    <link rel="stylesheet" href="estilos.css">
+    <link rel="stylesheet" href="estilosN.css">
 
 
 </head>
@@ -29,10 +29,36 @@
 
 
         <section class="cuerpo">
+            <h2>¿Quienes somos y que queremos?</h2>
+            <p>Colombia extraordinaria nace con el objetivo de salvaguardar la actividad económica de turismo,
+             crear una comunidad turística por medio de un modelo de suscripción entre grandes, medianos y pequeños empresarios 
+             para poder hacer frente a los grandes monopolios de plataformas turísticas que abusan de la comunidad turística con
+              grandes tasas de interés. Así apoyar a los mismo en el marketing digital y asesoramiento frente al mismo.<br>
+             Colombia extraordinaria fue creada por dos empresas: agencia destinos que tiene como actividad comercial el ser 
+             agencia de viajes con más de 10 años de experiencia y Gracias devs, empresa desarrolladora de software con experiencia
+              en servicios de marketing digital con experiencia de trabajos internacionales, así como nacionales, con más de 5 años
+               de experiencia. Colombia extraordinaria es una empresa que tiene como objetivo fundamental crear una comunidad 
+               turística formada por viajeros, agencias de viajes, atractivos turísticos, como fincas, reservar naturales,
+               parques temáticos, avistamiento de aves, guías entre otros para el fortalecimiento nacional del turismo en
+                Colombia 
+               en general.
+              <br>Una comunidad en la cual los viajeros puedan disfrutar de servicios de calidad y las agencias de viajes y atractivos 
+               turísticos
+              cuenten con múltiples beneficios para vender por medio de esta. <br>
+              Colombia extraordinaria posee una base de datos de información turística de todos los municipios, departamentos y regiones
+             de Colombia, así como parques naturales y las 1900 aves que se pueden observar en el país con ello aumenta 
+             considerablemente el tráfico de usuarios por la plataforma.</p>
 
         </section>
 
         <footer class="pie de pagina">
+            <h2>Siguenos<br></h2>
+            <img src="insta.png" alt="Instagran" width="100" height="100">
+            <img src="face.png" alt="Facebook" width="100" height="100">
+            <img src="whatsapp.png" alt="whatsapp" width="100" height="100">
+            <img src="correo.png" alt="correo" width="100" height="100">
+    
+
 
         </footer>
     
