--- a/Destino.html
+++ b/Destino.html
@@ -65,6 +65,11 @@
 </aside>
 </div>
     <footer class="pie de pagina">
+        <h2>Siguenos<br></h2>
+        <img src="insta.png" alt="Instagran" width="100" height="100">
+        <img src="face.png" alt="Facebook" width="100" height="100">
+        <img src="whatsapp.png" alt="whatsapp" width="100" height="100">
+        <img src="correo.png" alt="correo" width="100" height="100">
 
     </footer>
 
