--- a/Regiones.html
+++ b/Regiones.html
@@ -30,8 +30,8 @@
         <br>
         <h1 class="display-3 mt-3" text-success>Región la Amazonia</h1>
     <div class="card" style="width: 18rem;"><br><br><br>
-        <img src="slid1.png" class="card-img-top" alt="región Amazonia"  width="1340" height="600" style="float:none;">
-        
+        <img src="slid1.png" class="card-img-top" alt="región Amazonia"  width="1340" height="500" style="float:none;">
+        <br>
     </header>
        
      <div>
@@ -44,6 +44,7 @@
             Su posición, en plena mitad del mundo; las bajas alturas de sus tierras sobre el nivel del mar; la fertilidad de sus suelos, 
             donde se extiende la selva, y la abundancia de aguas son características de esta zona perteneciente a la cuenca del río del mismo nombre: el río Amazonas, el más largo del mundo, con 6.800 km.
             El paisaje de esta región es un tapete verde tupido con árboles apretujados tan altos como un edificio de diez pisos.</P>
+            <br>
             <br>
             <br>
             <br>
@@ -80,6 +81,11 @@
 
 
        <footer class="pie de pagina">
+        <h2>Siguenos<br></h2>
+        <img src="insta.png" alt="Instagran" width="100" height="100">
+        <img src="face.png" alt="Facebook" width="100" height="100">
+        <img src="whatsapp.png" alt="whatsapp" width="100" height="100">
+        <img src="correo.png" alt="correo" width="100" height="100">
 
         </footer>
 
