--- a/index.html
+++ b/index.html
@@ -83,9 +83,12 @@
 
 
 <footer class="pie de pagina">
-    <h1>Siguenos<br></h1>
+    <h2>Siguenos<br></h2>
     <img src="insta.png" alt="Instagran" width="100" height="100">
     <img src="face.png" alt="Facebook" width="100" height="100">
+    <img src="whatsapp.png" alt="whatsapp" width="100" height="100">
+    <img src="correo.png" alt="correo" width="100" height="100">
+
 </footer>
   </div>
 
